--- a/HideAndSeek/HideAndSeek.csproj
+++ b/HideAndSeek/HideAndSeek.csproj
@@ -57,6 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="Helpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sprites\Door.cs" />
